--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ASP.NET_Start_Project-956164D9-3B5B-4794-B2DE-775F35FB1184;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
